Tue Dec 30 07:30:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/pathname.rb: Added documentation.

Mon Dec 29 20:08:17 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (GenericRequest#initialize): check if path
	  begins with '/'.

	* lib/net/http.rb: def m( arg ) -> def m(arg)

Mon Dec 29 12:51:02 2003  Dave Thomas  <dave@pragprog.com>

	* eval.c: Add RDoc for Kernel global functions.

Mon Dec 29 11:00:16 2003  Dave Thomas  <dave@pragprog.com>

	* array.c: Tidy up RDoc loose ends.

Mon Dec 29 05:05:51 2003  Dave Thomas  <dave@pragprog.com>

	* struct.c, random: Add RDoc comments

Mon Dec 29 02:25:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/optparse.rb: Improved documentation.

Mon Dec 29 02:20:54 2003  Dave Thomas  <dave@pragprog.com>

	* eval.c: Add RDoc for class Proc, Method, UnboundMethod

Mon Dec 29 02:20:26 2003  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: fix install directory if destdir and compile_dir are
	  not in the same drive.

	* ext/extmk.rb: ditto. [ruby-list:39009]

	* win32/Makefile.sub, win32/README.win32, win32/configure.bat,
	  win32/setup.mak: new configure scheme. use ``configure --prefix=dir''
	  instead of ``nmake DESTDIR=dir install''.

Mon Dec 29 00:41:44 2003  Dave Thomas  <dave@pragprog.com>

	* math.c: Add RDoc comments

Sun Dec 28 20:19:11 2003  Tanaka Akira  <akr@m17n.org>

	* ext/stringio/stringio.c (strio_sysread): StringIO.new.sysread didn't
	  raise EOFError.

	* ext/zlib/zlib.c (gzreader_gets): don't increment lineno when
	  gzfile_read_all returns "".

Sun Dec 28 15:25:08 2003  Dave Thomas  <dave@pragprog.com>

	* class.c,object.c,parse.y,sprintf.c,variable.c: Document classes
	  Object, Module, etc...

Sun Dec 28 11:55:29 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/csv/test_csv.rb: generate bom.csv and mac.csv files on the fly.
	  [ruby-talk:88852]

	* test/csv/{bom.csv,mac.csv}: removed.

Sun Dec 28 08:56:51 2003  Dave Thomas  <dave@pragprog.com>
